--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="header-content">
+            <div class="brand">
+                <div class="logo">Sitem</div>
+                <nav class="nav-menu">
+                    <a href="#anasayfa" class="nav-link">Ana Sayfa</a>
+                    <a href="#hakkimizda" class="nav-link">Hakkımızda</a>
+                </nav>
+            </div>
+            <a href="#iletisim" class="cta-contact">İletişim</a>
+        </div>
+    </header>
 
     <div class="container">
         <h1 class="title">Merhaba!</h1>
